# pubrun

./: .editorconfig  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .sanitize-allow.toml  .sanitize-local.toml.example  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  TODO.md  hatch_build.py  hpc_node.py  inject_prints.py  patch_tests.py  pyproject.toml  release-notes-v1.2.0.md  tox.ini
.agents/prompts/: .gitignore  README.md
.agents/workflows/: index.md
.claude/commands/: advise.md  assess-accessibility.md  assess-api-design.md  assess-architecture.md  assess-bugs.md  assess-compliance.md  (+28 more)
.github/: pull_request_template.md
benchmarks/: README.md  aggregate.py  harness.py  plot.py  run_bench.sbatch  scenarios.py  share_safety.py  submit_bench.sh  submit_bench_lsf.sh  submit_bench_pbs.sh  submit_bench_sge.sh  test_benchmarks.py  test_share_safety.py
docs/: API.md  CLI.md  api.md  architecture.md  cli.md  configuration.md  functional_spec.md  hpc.md  manifest.md  performance.md  research-use.md
examples/: 00_auto_start.py  01_minimal_start_stop.py  02_context_manager.py  03_audit_decorator.py  04_annotate_events.py  05_execution_phases.py  06_subprocess_spy.py  07_file_capture.py  08_diff_engine.py  09_cli_methods.py  10_hardware_probe.py  11_cli_report.py  verify_all.py
release-review/: 00-run-protocol.md  08-final-ship-review.md  09-release-execution.md  MANIFEST.md  README.md
schemas/: benchmark.schema.json  manifest.schema.json
scripts/: sanitize_paths.py  update_commit_file.py
tests/: conftest.py  test_api.py  test_bench_command.py  test_capture.py  test_capture_engines.py  test_checks_commands.py  test_cli.py  test_combined.py  test_config.py  test_diff_usability.py  test_edge_cases.py  test_env_capture.py  test_events.py  test_example_minimal_research_workflow.py  test_examples.py  test_explicit_api.py  test_file_io_provenance.py  test_full_mode.py  test_hardware.py  test_hpc_hydration_e2e.py  test_import_modes.py  test_liveness.py  test_manifest_schema.py  test_methods_multi.py  test_new_features.py  test_output.py  test_pause_resume.py  test_profile_deprecation.py  test_quality.py  test_redaction.py  test_render.py  test_report_subpackage_integrity.py  test_reports.py  test_resources.py  test_sanitize_paths.py  test_show_config.py  test_show_sections.py  test_signals.py  test_status.py  test_templates.py  (+3 more)
(+355 files in other folders)
