[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runtrace"
version = "0.1.0"
description = "A lightweight Python library for capturing execution context."
readme = "README.md"
authors = [
    { name = "Gabriele Fariello" }
]
requires-python = ">=3.8"
dependencies = [
    "tomli>=1.1.0; python_version < '3.11'"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "pytest-cov"
]

[tool.hatch.build.targets.wheel]
packages = ["src/runtrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
