[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pubrun"
version = "1.0.3"
description = "A lightweight Python library for capturing execution context."
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    { name = "Gabriele Fariello" }
]
requires-python = ">=3.8"
keywords = [
    "reproducibility",
    "provenance",
    "metadata",
    "telemetry",
    "research-software",
    "execution-tracking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]
dependencies = [
    "tomli>=1.1.0; python_version < '3.11'"
]

[project.urls]
Homepage = "https://github.com/fariello/pubrun"
Repository = "https://github.com/fariello/pubrun"
Issues = "https://github.com/fariello/pubrun/issues"

[project.scripts]
pubrun = "pubrun.__main__:main"
pbr = "pubrun.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "pytest-cov",
    "tox>=4.0"
]
tui = [
    "textual>=0.80.0",
    "rich>=13.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/pubrun"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
